k8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
  - name: client
    image: mokhlesur96/go-app:a98325e641cbb0ec474b34d0110fb2fd24ccdf6f
    ports:
      - containerPort: 8081
