k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment-name
  labels:
    app: go-app-deployment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app-img
          image: mokhlesur96/go-app:1.0
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10

        # PostgreSQL container
        - name: postgresql
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-data
          emptyDir: {}
      restartPolicy: Always
