k8s/psql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql

    spec:
      containers:
        - name: psql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: psql-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: psql-data
          hostPath:
            path: /database/data/
