k8s/psql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql-statefulset
spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: psql
  template:
    metadata:
      labels:
        app: psql

    spec:
      containers:
        - name: psql
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: psql

          volumeMounts:
            - name: psql-data
              mountPath: /var/lib/postgresql/data
            - name: psql-config
              mountPath: /etc/postgresql
              readOnly: true

      volumes:
        - name: psql-data
          persistentVolumeClaim:
            claimName: psql-pvc

        - name: psql-config
          configMap:
            name: psql-config

  volumeClaimTemplates:
    - metadata:
        name: psql-pvc
        annotations:
          volume.beta.kubernetes.io/storage-class: standard
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
